--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <script>
         // Conexión con el socket server
-        const socket = io('http://localhost:8080');
+        const socket = io('https://fitchat-backend-6cb534693029.herokuapp.com');
 
         
         /// Para emitir
